# repo-consolidated

./: .gitignore  CONSOLIDATION_DECISIONS.md  README.md
Java/main/apps/: .gitignore  XalanToSaxonConversion.docx  custom-rule.xml  pom.xml
Java/main/docs/: README.md
Java/master/apps/: Java  local_history.patch  log4j2-1.properties  log4j2-2.properties  log4j2-4.properties  log4j2.properties
Junit/main/apps/: .project
Python/GoogleAntiGraviryProjets/apps/: .gitignore  Important URL.docx  JBoss7-8-config-migration.docx  Maven-archetype-install.docx  Python  Singtel_Bill_Analysis_dec2025.xlsx  (+2 more)
Python/python-cursor/apps/java-component-inventory/: .gitignore  config.example.ini  pyproject.toml
Python/python-cursor/apps/pr-code-review-automation/: .gitignore  pyproject.toml
docs/: README_PRESENTATIONS.md  Team_AI_Tools_Evolution_Awareness_Session.pptx  build_consolidated_presentation.py  build_executive_presentation.py  build_team_ai_awareness_session_ppt.py
docs/collected_prompt_usecases/: BatchProgramCreationUsecase.txt  MASTER_SUMMARIZED_PROMPTS_FOR_AI_PROJECT_GENERATION.md  Prompts.txt  PromptsForJbossupgrade.txt
docs/deployment/: PROPERTIES_DEPLOYMENT_VALIDATION_RUNBOOK.md
docs/review/: CR_SLICE_REVIEW_AUTOMATION_DESIGN.md  CR_SLICE_REVIEW_RUNBOOK.md
git-tools/: HOTFIX_BRANCH_VALIDATION_DESIGN.md  HOTFIX_TEAM_REPO_TEST_CASES.md
git-tools/ci/: bitbucket-pipelines-cr-slice.example.yml  jenkins-cr-slice-validation.example.groovy
manifests/dedupe/: filename_groups.csv  known_hashes.csv
manifests/provenance/: migration_manifest.csv
(+1656 files in other folders)
