[project]
name = "java-component-inventory"
version = "0.1.0"
description = "Scan selected component folders under a base path; report Java package/class inventory and collisions to Excel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openpyxl>=3.1.0"]

[project.scripts]
java-component-scan = "java_component_inventory.cli:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
